src/tests/snapshots/cendol__tests__semantic_negative__addrof_rvalue.snap
---
source: src/tests/semantic_negative.rs
expression: output
---
Diagnostics count: 1

Level: Error
Message: Expression is not assignable (not an lvalue)
Span: SourceSpan(source_id=SourceId(2), start=43, end=50)
