src/tests/snapshots/cendol__tests__semantic_negative__assignment_to_deref_const_ptr.snap
---
source: src/tests/semantic_negative.rs
expression: output
---
Diagnostics count: 1

Level: Error
Message: cannot assign to read-only location
Span: SourceSpan(source_id=SourceId(2), start=88, end=94)
