src/tests/snapshots/cendol__tests__semantic_negative__bitfield_invalid_type.snap
---
source: src/tests/semantic_negative.rs
expression: output
---
Diagnostics count: 1

Level: Error
Message: bit-field type 'float' is invalid
Span: SourceSpan(source_id=SourceId(2), start=38, end=43)
