src/tests/snapshots/cendol__tests__semantic_negative__conflicting_function_decl.snap
---
source: src/tests/semantic_negative.rs
expression: output
---
Diagnostics count: 2

Level: Error
Message: conflicting types for 'foo'
Span: SourceSpan(source_id=SourceId(2), start=33, end=51)

Level: Note
Message: previous declaration is here
Span: SourceSpan(source_id=SourceId(2), start=9, end=24)
