src/tests/snapshots/cendol__tests__semantic_negative__deref_incomplete_type.snap
---
source: src/tests/semantic_negative.rs
expression: output
---
Diagnostics count: 1

Level: Error
Message: incomplete type 'struct A'
Span: SourceSpan(source_id=SourceId(2), start=77, end=81)
