src/tests/snapshots/cendol__tests__semantic_negative__designated_init_field_not_found.snap
---
source: src/tests/semantic_negative.rs
expression: output
---
Diagnostics count: 1

Level: Error
Message: no member named 'y' in 'struct A'
Span: SourceSpan(source_id=SourceId(2), start=76, end=84)
