src/tests/snapshots/cendol__tests__semantic_negative__duplicate_case.snap
---
source: src/tests/semantic_negative.rs
expression: output
---
Diagnostics count: 1

Level: Error
Message: duplicate case value '1'
Span: SourceSpan(source_id=SourceId(2), start=45, end=122)
